# Ejercicios-Libreria-estandar-de-C

./: CMakeLists.txt  README.md
ejercicio 1/: main.cpp
ejercicio 2/: main.c
ejercicio 3/: Leeme c.txt  main.c  mainb.c
