cmake_minimum_required(VERSION 3.26)
project(Contenedores-Dinamicos)

set(CMAKE_CXX_STANDARD 14)



add_executable(ejercicio_1 "ejercicio 1/main.cpp")
add_executable(ejercicio_2 "ejercicio 2/main.c")
add_executable(ejercicio_3a "ejercicio 3/main.c"
)
add_executable(ejercicio_3b
        "ejercicio 3/mainb.c")